# pipidae

./: .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/source/: conf.py  index.md
docs/source/api/: pipidae.cli.rst  pipidae.rst
docs/source/users-guide/: how-to-use-cli.md
src/pipidae/: __init__.py  cli.py
