[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "Pipidae"
authors = [
    { name = "Nobuyuki Sekimori", email = "43375309+juno-rmks@users.noreply.github.com" },
]
description = "Pipidae は Python モジュールです。"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1.7"]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/juno-rmks/pipidae/"
"Issue Tracker" = "https://github.com/juno-rmks/pipidae/issues/"

[project.optional-dependencies]
test = ["pytest", "coverage", "pytest-benchmark"]
dev = ["build", "twine", "pylint", "black", "isort"]
docs = [
    "Sphinx==5.3.0",
    "sphinx-intl==2.1.0",
    "sphinx-rtd-theme==1.2.0",
    "myst-parser==1.0.0",
]

[project.scripts]
pipidae = "pipidae.cli:cli"

[tool.setuptools.dynamic]
version = { attr = "pipidae.__version__" }

[tool.pylint.format]
max-line-length = "88"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--benchmark-skip"]
filterwarnings = ["error"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
